--- a/contact_me.html
+++ b/contact_me.html
@@ -1,11 +1,22 @@
-<h1><u>My Contact Details</u></h1>
-<h3>These are Place Holders</h3>
-<p>
-    my address goes here = America ,Burmuda<br/>
-    <br/>
-    Contact Number = 072 644 8909<br/>
-    <br/>
-    Email = fake@hkjb.gmail.com
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Me</title>
+</head>
+<body>
+    <h1><u>My Contact Details</u></h1>
+    <h3>These are Place Holders</h3>
+    <p>
+        my address goes here = America ,Burmuda<br/>
+        <br/>
+        Contact Number = 072 644 8909<br/>
+        <br/>
+        Email = fake@hkjb.gmail.com
+    </p>
 
-<a href="index.html">To Home Page</a>
+    <a href="index.html">To Home Page</a>
+    
+</body>
+</html>
