Add HTML structure to hobbies page

--- a/hobbies.html
+++ b/hobbies.html
@@ -1,11 +1,22 @@
-<h1><u>My Hobbies</u></h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Hobbies</title>
+</head>
+<body>
+    <h1><u>My Hobbies</u></h1>
 
-<ul>
-    <li>Thinking about new things</li>
-    <li>Learn something new</li>
-    <li>Listen to music</li>
-    <li>Watch contects on YouTube</li>
-    <li>Coding</li>
-</ul>
+    <ul>
+        <li>Thinking about new things</li>
+        <li>Learn something new</li>
+        <li>Listen to music</li>
+        <li>Watch contects on YouTube</li>
+        <li>Coding</li>
+    </ul>
 
-<a href="index.html">To Home Page</a>
+    <a href="index.html">To Home Page</a>
+    
+</body>
+</html>
